--- a/assets/styles/scss/views/_gnu.scss
+++ b/assets/styles/scss/views/_gnu.scss
@@ -1,12 +1,15 @@
 #gnu-container
 {
-    h2{
+    h2
+    {
         text-decoration: underline;
     }
-    h3{
+    h3
+    {
         margin-left: 1.5rem !important;
     }
-    p, ul{
+    p, ul
+    {
         margin-left: 1.75rem;
     }
 }
