--- a/assets/styles/scss/general/_footer.scss
+++ b/assets/styles/scss/general/_footer.scss
@@ -39,7 +39,7 @@
       a:hover
       {
         text-decoration: underline;
-        color: rgb(197, 90, 17);
+        color: $alt-color;
       }
       
       li
@@ -66,7 +66,7 @@
 }
 
 @media screen and (min-width: $desk-brkpnt) {
-  /* TABLETTE */
+  /* DESKTOP */
   #top-footer
   {
     nav
