--- a/assets/styles/scss/general/_vars.scss
+++ b/assets/styles/scss/general/_vars.scss
@@ -1,3 +1,5 @@
+// Ici sont stocker les variables réutiliées dans les autres scripts CSS/SCSS
+
 $dark-blue: rgb(47,85,151);
 $light-blue: rgb(143,170,220);
 $alt-color: rgb(255, 150, 81);
