--- a/views/admin/_footer.phtml
+++ b/views/admin/_footer.phtml
@@ -14,6 +14,7 @@
     <ul>
         <li><a href="https://github.com/kodingcore" target="_blank"><i class="fa-brands fa-github" style="color: #c55a11;"></i> Github</a></li>
         <li><a href="https://linkedin.com/in/kodingcore" target="_blank"><i class="fa-brands fa-linkedin" style="color: #c55a11;"></i> LinkedIn</a></li>
+        <li><i class="fa-solid fa-at" style="color: #c55a11;"></i><a href="mailto:kodingcore@gmail.com">Envoyer un e-mail</a></li>
         <a href="index.php?route=gnu">Politique de confidentialité</a>
     </ul>   
 </nav>
