--- a/views/admin/_header.phtml
+++ b/views/admin/_header.phtml
@@ -4,7 +4,7 @@
         <li><a href="index.php?route=shop">Vitrine</a></li>
         <li><a href="index.php?route=account">Mon compte</a></li>
         <li><a href="index.php?route=dashboard">Panneau de control</a></li>
-        <li><a href="index.php?route=contact">Contactez moi</a></li>
+        <li><a href="index.php?route=contact">Contactez-moi</a></li>
         <li><a href="index.php?route=register">Créer un compte</a></li>
         <li><a href="index.php?route=about">À propos</a></li>
         <li><a href="index.php?route=disconnect">Se déconnecter</a></li>
