--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="https://i.goopics.net/wovpgb.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="assets/styles/css/style.css">
+    <link rel="stylesheet" href="assets/styles/css/style-min.css">
     <script src="https://kit.fontawesome.com/a2be3c71ec.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -38,6 +38,7 @@
             ?>
         </div>
     </header>
+    <!-- left-aside des ancres -->
     <div id="left-aside-access">
         <i class="fa-solid fa-caret-right" style="color: #ffffff;"></i>
     </div>
@@ -48,7 +49,7 @@
                 ?> <a href="index.php?route=request"><button id="float-btn">Votre site sur-mesure</button></a> <?php
             }
         ?>
-    
+    <!-- footer principal -->
     <footer id="top-footer">
         <?php
             
@@ -69,6 +70,10 @@
             }
         ?>
     </footer>
+    <!-- ---------------------------------------------- -->
+    <!--  Fonction en stand-by, car pas d'utilisation   -->
+    <!--  de cookies sur ce site                        -->
+    <!-- ---------------------------------------------- -->
     <!--<section class="cookies">-->
     <!--    <div class="cookies-texte">-->
     <!--        <p>En pousuivant, vous acceptez l'utilisation des cookies par le -->
