--- a/views/user/_header.phtml
+++ b/views/user/_header.phtml
@@ -3,7 +3,7 @@
         <li><a href="index.php?route=homepage">Accueil</a></li>
         <li><a href="index.php?route=shop">Vitrine</a></li>
         <li><a href="index.php?route=account">Mon compte</a></li>
-        <li><a href="index.php?route=contact">Contactez moi</a></li>
+        <li><a href="index.php?route=contact">Contactez-moi</a></li>
         <li><a href="index.php?route=about">À propos</a></li>
         <li><a href="index.php?route=disconnect">Se déconnecter</a></li>
     </ul>
