--- a/views/user/shop.phtml
+++ b/views/user/shop.phtml
@@ -20,12 +20,12 @@
                 <header>
                     <h3><?= $template->getName(); ?></h3>
                 </header>
-                    <img src="<?= $template->getImagePath() ?>" alt="Image du template <?= $template->getName() ?>">
+                    <img src="<?= $template->getImagePath() ?>" alt="<?= $template->getImageDescription() ?>">
                 <footer>
                     <p><?= $template->getDescription() ?></p>
                     <p><?= "Créer le : {$template->getCreatedAt()}" ?></p>
-                    <a href="index.php?route=request"><button class="btn">Votre site sur-mesure</button></a>
                 </footer>
+                <a href="index.php?route=request"><button class="btn">Votre site sur-mesure</button></a>
             </article>
             <?php
         }
