--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -24,15 +24,17 @@
         </fieldset>
     </section>
 
-    <!-- ------------------------------ -->
-    <!-- -------SECTION DE CONTROL----- -->
-    <!-- ------------------------------ -->
+    <!-- -------------------------------- -->
+    <!-- --------SECTION DE CONTROL------ -->
+    <!-- -------GÉNÉRÉ EN JAVASCRIPT----- -->
+    <!-- -------------------------------- -->
     <section id="control-section"></section>
 
-    <!-- ------------------------------ -->
-    <!-- -------SECTION D'ÉDITION------ -->
-    <!-- --------SECTION D'AJOUT------- -->
-    <!-- ------------------------------ -->
+    <!-- -------------------------------- -->
+    <!-- --------SECTION D'ÉDITION------- -->
+    <!-- ---------SECTION D'AJOUT-------- -->
+    <!-- -------GÉNÉRÉ EN JAVASCRIPT----- -->
+    <!-- -------------------------------- -->
     <section id="add-edit-section"></section>
 </main>
 <!-- ------------------------------------------------------------------------------------- -->
